k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo
spec:
  type: NodePort
  selector:
    app: demo-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
